# Thesis

./: .gitignore  question.md
src/drone_c/: CMakeLists.txt  README.md  Readme_drone.md  package.xml
src/drone_c/Arduino/: Arduino.ino
src/drone_c/Arduino/rtcom/: rtcom.py
src/drone_c/Arduino/src/: CompClass.cpp  CompClass.h  Drone_com.cpp  Drone_com.h  EkfClass.cpp  EkfClass.h  Madgwick.cpp  Madgwick.h  MotorsControl.cpp  MotorsControl.h  PID_type.cpp  PID_type.h  STD_Filter.cpp  STD_Filter.h  Var_types.h  Voltmeter.h  drone_comclass.cpp  drone_comclass.h
src/drone_c/arduino2/: arduino2.ino
src/drone_c/arduino2/not_use /: Madgwick.cpp
src/drone_c/arduino2/rtcom/: __init__.py
src/drone_c/arduino2/src/: CompClass.cpp  CompClass.h  EkfClass.cpp  EkfClass.h  IMU_type.cpp  IMU_type.h  Madgwick.h  MotorsControl.cpp  PID_type.h  STD_Filter.cpp  STD_Filter.h  Var_types.h  Voltmeter.cpp  Voltmeter.h  drone_comclass.cpp  drone_comclass.h  drone_identify.h
src/drone_c/drone_com/: Drone_com.h
src/drone_c/launch/: drone_launch.launch.py
src/drone_c/main_ekf/: main_ekf.ino
src/drone_c/main_ekf/src/: Drone_com.cpp  Drone_com.h  PID_type.cpp  PID_type.h  ekf_filter.cpp  ekf_filter.h
src/drone_c/mainv4/: mainv4.ino
src/drone_c/mainv4/src/: CompClass.cpp  CompClass.h  Drone_com.cpp  Drone_com.h  MotorsControl.cpp  MotorsControl.h  PID_type.cpp  PID_type.h  Var_types.h
src/drone_c/mainv5/: mainv5.ino
src/drone_c/mainv5/src/: CompClass.cpp  CompClass.h  Drone_com.cpp  EkfClass.cpp  EkfClass.h  MotorsControl.cpp  PID_type.cpp  magwick.cpp  magwick.h
src/drone_c/mekf/: mekf.ino
src/drone_c/mekf/src/: EkfClass.cpp  EkfClass.h  MotorsControl.h  PID_type.cpp  PID_type.h
src/drone_c/msg/: AltitudeLidar.msg  DroneHeader.msg  Filter.msg  ImuFilter.msg  PidConsts.msg
src/drone_c/paper/: naor_wirting.md
src/drone_c/pcb/: PCB_PCB_drone_shape_2025-02-07.json  PCB_drone_shape.md
src/drone_c/picture/linkdin_post/: linkdin.md
src/drone_c/plotjuggler/: plotjugller_save.xml
src/drone_c/src/: boll.py  control_optimize.py  csv_bag_convert.py  imu_subscriber.py  ros_bag_ploter.py  rtcom_teensy_ros.py
src/drone_c/src/RL/: TD3_learn.py
src/drone_c/src/drone_outside_calibration/: imu_bias_finder.py
src/drone_c/src/modern_control/: README.md  TD3.py  control.py  main.py  requirements.txt  setup.py
src/drone_c/src/motor_test/: motor_test.ino
src/drone_c/src/rosbag2_2025_02_06-18_40_04/: metadata.yaml
src/ground_bot/: CMakeLists.txt  frames_2025-05-01_04.59.42.gv  frames_2025-05-03_09.41.00.gv  frames_2025-05-05_15.17.44.gv  package.xml  readme_gndbot.md
src/ground_bot/arduino/rpi_lidar/: rpi_lidar.ino
src/ground_bot/config/: ackermann_controller.yaml  costmap_params.yaml  diff_drive_controller_velocity.yaml  ekf.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/ground_bot/ground_bot/: gnd_bot_no_ros.py  ground_bot_rtcom.py
src/ground_bot/launch/: ackermann_drive_example.launch.py  hamma_bot.launch.py  joy_control.launch.py  navigation_launch.launch.py  real_bot.launch.py  robot_discription.launch.py  sim_bot.launch.py  simple_joy_control.launch.py
src/ground_bot/msg/: RollerData.msg
src/ground_bot/pcb/: PCB_PCB_gnd_robot_2025-02-07.json
src/ground_bot/rpi_lidar/: lidar_class.cpp  lidar_class.h  rpi_lidar.ino
src/ground_bot/rpi_lidar/python_code/: rpi_py.py
src/ground_bot/rpi_lidar/src/: lidar_class.cpp  lidar_class.h
src/ground_bot/rviz/: navigation_config.rviz  urdf_config.rviz  urdf_real_bot.rviz
src/ground_bot/scripts/: ground_bot_rtcom.py
src/ground_bot/src/: joy_twist.cpp  optical_flow_node.py  twist_to_stump.cpp
src/ground_bot/urdf/: ground_bot_descriptor.urdf  my_bot.urdf  robot.urdf  robot_description.urdf
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: robot_controllers.yaml
src/robot_description/launch/: controller.launch.py  gazebo_bot.launch.py  simple_drone.launch.py
src/robot_description/urdf/: motor.ros2_control.xacro  my_robot.urdf.xacro  robot_gazebo.xacro
src/robot_description/worlds/: multicopter.sdf
src/sim_drone/: CMakeLists.txt  Readme_sim_drone.md  package.xml
src/sim_drone/config/: controller_config.yaml  main.urdf.xacro  motor.ros2_control.xacro
src/sim_drone/launch/: gazebo_bot.launch.py
src/swing_drone/: CMakeLists.txt  package.xml
src/swing_drone/DOCKER/: Dockerfile  entrypoint.sh  readme.md
src/swing_drone/config/: drone_controller.yaml
src/swing_drone/include/swing_drone/: Var_type.hpp  backsteping.hpp  joint_wrench_plugin.hpp  micros_lib.hpp  pub.hpp  ros2_data_graber.hpp  simple_rate_mode.hpp  std_operation.hpp
src/swing_drone/launch/: control.launch.py  full_sim.launch.py  gazebo_view.launch.py  iris_world.launch.py  rviz.launch.py
src/swing_drone/meshes/: CCW_prop.STL  CW_prop.STL  C_prop_link.STL  D_prop_link.STL  E_prop_link.STL  F_prop_link.STL  G_prop_link.STL  H_prop_link.STL  arm.STL  base_link.STL  base_link_new.STL  bl_link.STL  br_link.STL  fr_link.STL  low_face_arm.STL
src/swing_drone/paper/: importent_data.md
src/swing_drone/script/: fix_motor_dir.py  joint_controller_test.py  math_check.py  motor_control_gui.py  quart_euilr.py  test_joint_movement.py
src/swing_drone/src/: flight_controller_main.cpp  joint_control_publisher.cpp  joint_controller_plugin.cpp  joint_wrench_plugin.cpp  micros_lib.cpp  pub.cpp  ros2_data_graber.cpp  simple_rate_mode.cpp  std_operation.cpp
src/swing_drone/src/not_use /: swing_drone_gazebo.urdf.xacro
src/swing_drone/urdf/: main.urdf.xacro  robot_control.urdf.xacro  robot_description.urdf.xacro  robot_gazebo.urdf.xacro  urdf_asem_swing_drone.urdf
src/swing_drone/worlds/: bebop_copy.sdf  empty.sdf
src/x3_drone/: CMakeLists.txt  model.sdf  package.xml  readme.md
src/x3_drone/include/x3_drone/: Var_type.hpp  pub.hpp  (+2 more)
src/x3_drone/launch/: gazebo_view.launch.py
src/x3_drone/msg/: EulerAngles.msg  Pid.msg
src/x3_drone/script/: quart_euilr.py
src/x3_drone/src/: flight_controller_main.cpp  micros_lib.cpp  pub.cpp  rate_mode.cpp  ros2_data_graber.cpp
src/x3_drone/worlds/: empty.sdf  worlds.sdf
(+384 files in other folders)
