<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swing_drone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="naorw@post.bgu.ac.il">naor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Message generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Add Python dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>ros_gz_interfaces</depend>
  
  <!-- Add C++ dependencies for Ignition Gazebo plugin -->
  <depend>rclcpp</depend>
  <depend>ros_gz_sim</depend>
  <depend>std_msgs</depend>
  
  <!-- Add Gazebo Garden simulation plugins for MulticopterMotorModel -->
  <depend>gz-sim</depend>
  
  <!-- Additional Gazebo dependencies for joint controller plugin -->
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>gz-transport13</build_depend>
  <build_depend>gz-msgs10</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
